--- a/index.html
+++ b/index.html
@@ -8,42 +8,46 @@
     <title>Library</title>
 </head>
 <body>
-    <header>
-        <h1>The Mysia Library</h1>
-        <div class="sign-in">
-            <button type="button">Sign-In</button>
-        </div>
-    </header>
-    <aside>
-        <div class="info">
-            <h3>New Book</h3>
-            <div class="new-book-wrapper">
-                <label for="book-name">Name</label>
-                <input id="book-name" name="book-name" type="text">
-                <label for="author-name">By</label>
-                <input id="author-name" name="author-name" type="text">
-                <label for="pages">How Many Pages</label>
-                <input id="pages" name="pages" type="number">
-                <div class="read-wrapper">
-                    <h4>Read?</h4>
-                    <label for="isRead">Yes</label>
-                    <input name="isRead" id="isRead" type="radio">
-                </div>
-                <button id="book-submit" type="button">Submit</button>
+    <div class="container">
+        <header>
+            <h1>The Mysia Library</h1>
+            <div class="sign-in">
+                <button class="pf-sign" type="button">Sign-In</button>
             </div>
-        </div>
-    </aside>
-    <section>
-        <div class="libary-grid">
-            <div class="book">
-                <div class="bookMark"></div>
-                <div class="title-wrapper">
-                <div class="title">Book</div>
-                <div class="author">YaBoi</div>
+        </header>
+        <aside>
+            <div class="info">
+                <h3>New Book</h3>
+                <div class="new-book-wrapper">
+                    <label for="book-name">Name</label>
+                    <input id="book-name" name="book-name" type="text">
+                    <label for="author-name">By</label>
+                    <input id="author-name" name="author-name" type="text">
+                    <label for="pages">How Many Pages</label>
+                    <input id="pages" name="pages" type="number">
+                    <div class="read-wrapper">
+                        <h4>Read?</h4>
+                        <div class="input-wrapper">
+                        <label for="isRead">Yes</label>
+                        <input name="isRead" id="isRead" type="checkbox">
+                        </div>
+                    </div>
+                    <button id="book-submit" type="button">Submit</button>
                 </div>
-                <div class="pages">256</div>
             </div>
-        </div>
-    </section>
+        </aside>
+        <section>
+            <div class="library-grid">
+                <div class="book">
+                    <div class="book-mark"></div>
+                    <div class="title-wrapper">
+                    <div class="title">Book</div>
+                    <div class="author">YaBoi</div>
+                    </div>
+                    <div class="pages">256</div>
+                </div>
+            </div>
+        </section>
+    </div>
 </body>
 </html>
