Made a input check function
the function checks if there is anything in the inputs and if
left blank will stop books with no title or author or amount of
pages to be made until that info is entered

--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <aside>
             <div class="info">
                 <h3>New Book</h3>
-                <div class="new-book-wrapper">
+                <form action="" class="new-book-wrapper ">
                     <label for="book-name">Name</label>
-                    <input id="book-name" name="book-name" type="text">
+                    <input id="book-name" name="book-name" type="text" placeholder="Book Name">
                     <label for="author-name">By</label>
-                    <input id="author-name" name="author-name" type="text">
+                    <input id="author-name" name="author-name" type="text" placeholder="Author Name">
                     <label for="pages">How Many Pages</label>
-                    <input id="pages" name="pages" type="number">
+                    <input id="pages" name="pages" type="number" placeholder="Pages Long">
                     <div class="read-wrapper">
                         <h4>Read?</h4>
                         <div class="input-wrapper">
@@ -33,7 +33,7 @@
                         </div>
                     </div>
                     <button id="book-submit" type="button">Submit</button>
-                </div>
+                </form>
             </div>
         </aside>
         <section>
