--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="icon" href="/img/Book.svg">
     <script src="https://kit.fontawesome.com/00af512445.js" crossorigin="anonymous"></script>
     <script src="/index.js" defer></script>
-    <title>Library</title>
+    <title>Mysia's Shelf</title>
 </head>
 <body>
     <div class="container">
         <header>
-            <h1>The Mysia Library</h1>
+            <h1>Mysia's Shelf</h1>
             <div class="sign-in">
                 <button class="pf-sign" type="button">Sign-In</button>
             </div>
