Small fix to properly load files on github pages

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" href="/img/Book.svg">
+    <link rel="icon" href="img/Book.svg">
     <script src="https://kit.fontawesome.com/00af512445.js" crossorigin="anonymous"></script>
-    <script src="/index.js" defer></script>
+    <script src="index.js" defer></script>
     <title>Mysia's Shelf</title>
 </head>
 <body>
